12/15/2002
	- Converting some types of records (TXT, for example) to wire format
	  could throw an IndexOutOfBoundsException.
	- TSIG signed UDP queries weren't properly verified by jnamed.

12/14/2002
	- Move additional data processing to the Record class from jnamed;
	  make jnamed use it, as well as the caching code.

12/9/2002
	- Add the Lookup class, which is what the dns class should have been,
	  and make the lookup sample program use it.

12/9/2002
	- When caching a message, a response object can be constructed
	  immediately.

12/4/2002
	- 1.3.1 released.

12/3/2002
	- If a subresolver of an ExtendedResolver exited by throwing
	  a RuntimeException, the ExtendedResolver would throw a
	  ClassCastException.   It should rethrow the RuntimeException.

12/3/2002
	- The Name code didn't handle names with non-printable characters.
	  (found by Serge Sozonoff <serge@globalbeach.com>)

11/28/2002
	- Fix a potential deadlock in the WorkerThread class.
	  (found by Serge Sozonoff <serge@globalbeach.com>)

11/26/2002
	- Fix a bug where looking up names without trailing dots
	  would fail if there was no searchlist.

10/31/2002
	- Fix a bug in searchlist processing on Windows.

10/20/2002
	- Record.toWire() and Record.toWireCanonical() do not need to
	  be declared as throwing IOException, since there's no
	  legitimate reason for them to throw one.

10/18/2002
	- Race condition fixes and memory usage improvements to the
	  NameSet class, used by Cache and Zone.

10/16/2002
	- 1.3.0 released.

10/11/2002
	- Add Name.getLabel()

10/10/2002
	- When cleaning the cache, catch ConcurrentModificationExceptions.

10/8/2002
	- Cleanups to Cache.addMessage() and the Credibility code.

10/7/2002
	- Fix problems with search path handling in the dns class.
	- Possible race condition fixes to the Cache code.

10/6/2002
	- Fix minor bugs in Name code (Bob Halley <bob.halley@nominum.com>)
	  
10/1/2002
	- Memory usage and speed improvements to the TypeMap class.

9/25/2002